# currencies-converter-rest-service-fastapi

./: .env  .env-dev  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.celery  LICENSE  README.md  docker-compose-dev.yml  docker-compose.yml  mypy.ini  openapi.json  pyproject.toml  start.sh
app/: actions.py  api.py  cache.py  celerybeat.py  celerytasks.py  main.py  schemas.py  settings.py
tests/: conftest.py  test_actions.py  test_api.py  test_cache.py  test_celerybeat.py  test_celerytasks.py  test_schemas.py  test_validation.py
tests/helpers/: supported_currencies.py
tests/helpers/test/: test_supported_currencies.py
