[tool.poetry]
name = "currencies-converter-rest-service-fastapi"
version = "0.1.0"
description = "Currencies Converter REST Service written in FastAPI"
authors = ["Bart Skowron <bxsx@bartskowron.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "~3.8"
fastapi = "^0.61.2"
gunicorn = "^20.0.4"
uvicorn = {extras = ["standard"], version = "^0.12.3"}
fastapi-plugins = "^0.6.0"
aioredis = "^1.3.1"
celery = {extras = ["redis"], version = "^5.0.2"}
pydantic = {extras = ["dotenv"], version = "^1.7.2"}
requests = "^2.25.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.9.1"
coverage = "^5.3"
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-asyncio = "^0.14.0"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
markers = [
    "ext: marks tests as external (deselect with '-m \"not ext\"')"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
